modified the layout,tables and typography

--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.css
@@ -209,7 +209,6 @@ ul.input-wrapper {
 }
 
 .data-table-content:hover {
-    overflow-x: auto;
     overflow-x: overlay;
 }
 
@@ -239,7 +238,7 @@ ul.input-wrapper {
     padding: 0.45em 0px;
     font-size: 0.83em;
     position: relative;
-    min-width: calc(100% - 1.66em);
+    min-width: 100%;
     left: 0;
     background-color: #fff;
     z-index: 1;
@@ -253,14 +252,6 @@ ul.input-wrapper {
     margin: auto;
     min-height: 2.66em;
     transition: 0.3s ease;
-}
-
-.data-table-rows:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.data-table-rows:nth-child(odd) {
-    background-color: #ffffff;
 }
 
 .data-table-rows:hover {
@@ -294,9 +285,6 @@ ul.input-wrapper {
     padding-bottom: 2px;
 }
 
-.row-cells div:hover {
-    letter-spacing: 0.3px;
-}
 
 .head-cells {
     margin: 0 3px;
@@ -310,8 +298,7 @@ ul.input-wrapper {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 140px;
-    padding-left: 30px;
+    width: 150px;
 }
 
 .table-cells:hover {
@@ -596,12 +583,6 @@ button.tmbutton:disabled {
 button.tmbutton:disabled:hover {
     background-color: #fff;
     box-shadow: none;
-}
-
-.data-table-rows:nth-child(even) {
-    border-radius: 0.3em;
-    padding-bottom: 5px;
-    height: 2.7em;
 }
 
 
