--- a/webapp/src/app/pacman-features/modules/admin/invoke-rule/invoke-rule.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/invoke-rule/invoke-rule.component.css
@@ -237,7 +237,7 @@ ul.input-wrapper {
     padding: 0.45em 0px;
     font-size: 0.83em;
     position: relative;
-    min-width: calc(100%);
+    min-width: 100%;
     left: 0;
     background-color: #fff;
     z-index: 1;
@@ -255,9 +255,6 @@ ul.input-wrapper {
     min-height: 2.66em;
 }
 
-.data-table-rows:nth-child(even) {
-    background-color: #f9f9f9;
-}
 
 .data-table-rows:nth-child(odd) {
     background-color: #ffffff;
@@ -306,7 +303,7 @@ ul.input-wrapper {
     overflow: unset;
     text-overflow: nowrap;
     white-space: nowrap;
-    width: 140px;
+    width: 150px;
 }
 
 .data-table-inner-content {
@@ -635,12 +632,6 @@ button.tmbutton:disabled:hover {
     font-size: 12px;
     font-weight: 600;
 }
-
-.data-table-rows:nth-child(even) {
-    border-radius: 0.3em;
-    padding-bottom: 5px;
-}
-
 
 /**************************************/
 
