--- a/webapp/src/app/pacman-features/modules/admin/job-execution-manager/update-job-execution-manager/update-job-execution-manager.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/job-execution-manager/update-job-execution-manager/update-job-execution-manager.component.css
@@ -393,7 +393,7 @@ li.list-inputs:hover {
     padding: 0.45em 0px;
     font-size: 0.83em;
     position: relative;
-    min-width: calc(100%);
+    min-width: 100%;
     left: 0;
     background-color: #fff;
     z-index: 1;
@@ -409,14 +409,6 @@ li.list-inputs:hover {
     width: calc(100% - 1px);
     margin: auto;
     min-height: 2.66em;
-}
-
-.data-table-rows:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.data-table-rows:nth-child(odd) {
-    background-color: #ffffff;
 }
 
 .data-table-rows:hover {
@@ -462,7 +454,7 @@ li.list-inputs:hover {
     overflow: unset;
     text-overflow: nowrap;
     white-space: nowrap;
-    width: 140px;
+    width: 150px;
 }
 
 .data-table-inner-content {
@@ -1138,11 +1130,6 @@ button.tmbutton:disabled:hover {
     float: left;
     font-size: 12px;
     font-weight: 600;
-}
-
-.data-table-rows:nth-child(even) {
-    border-radius: 0.3em;
-    padding-bottom: 5px;
 }
 
 
