--- a/webapp/src/app/pacman-features/secondary-components/issues-trend-history/issues-trend-history.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/issues-trend-history/issues-trend-history.component.css
@@ -32,7 +32,7 @@
 .sub-header {
     padding: 0.8em;
     background-color: #ffffff;
-    border: solid 1px #d6e2f1;
+    border-bottom: 2px solid var(--border-100);
     color: #555;
     font-size: 1em;
 }
