--- a/webapp/src/app/pacman-features/secondary-components/tagging-summary/tagging-summary.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/tagging-summary/tagging-summary.component.css
@@ -14,6 +14,7 @@
 
 .certficate-summary-wrapper{
     min-height: 18em;
+    padding: 0 1.25em 2em 1.25em;
 }
 
 .sub-heading {
@@ -21,10 +22,9 @@
     background-color: #dce3e9;
     font-size: 1em;
     color: #3f4a59;
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+    border-bottom: 2px var(--border-100);
 }
 
-.certficate-summary-container{
-    /* min-height: 90%;
-    display: flex;
-    align-items: center; */
-}
+
