--- a/webapp/src/app/post-login-app/common/post-login-header/post-login-header.component.css
+++ b/webapp/src/app/post-login-app/common/post-login-header/post-login-header.component.css
@@ -294,7 +294,7 @@ nav .nav-icon:last-child {
     padding: 0.9em 1em;
     font-size: 1em;
     color: #fff;
-    background: #ed0274;
+    background: var(--primary-400);
     font-family: ex2-bold;
     text-align: center;
     border-radius: 2px;
