--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/delete-asset-groups/delete-asset-groups.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/delete-asset-groups/delete-asset-groups.component.css
@@ -369,8 +369,6 @@ li.list-inputs:hover {
 .data-table-wrap a:hover {
     color: #e20074;
     /*font-family: ex2-medium;*/
-    letter-spacing: 0.2px;
-    text-shadow: 0.66px 0;
 }
 
 .data-table-head {
@@ -379,7 +377,7 @@ li.list-inputs:hover {
     padding: 0.45em 0px;
     font-size: 0.83em;
     position: relative;
-    min-width: calc(100% - 1.66em);
+    min-width: 100%;
     left: 0;
     background-color: #fff;
     z-index: 1;
@@ -393,14 +391,6 @@ li.list-inputs:hover {
     margin: auto;
     min-height: 2.66em;
     transition: 0.3s ease;
-}
-
-.data-table-rows:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.data-table-rows:nth-child(odd) {
-    background-color: #ffffff;
 }
 
 .data-table-rows:hover {
@@ -438,10 +428,6 @@ li.list-inputs:hover {
     padding-bottom: 2px;
 }
 
-.row-cells div:hover {
-    letter-spacing: 0.3px;
-}
-
 .head-cells {
     margin: 0 3px;
     font-family: ex2-medium;
@@ -454,7 +440,7 @@ li.list-inputs:hover {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 140px;
+    width: 150px;
     padding-left: 30px;
 }
 
@@ -1143,12 +1129,6 @@ button.tmbutton:disabled:hover {
     float: left;
     font-size: 12px;
     font-weight: 600;
-}
-
-.data-table-rows:nth-child(even) {
-    border-radius: 0.3em;
-    padding-bottom: 5px;
-    height: 2.7em;
 }
 
 
