--- a/webapp/src/app/pacman-features/modules/admin/enable-disable-rule/enable-disable-rule.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/enable-disable-rule/enable-disable-rule.component.css
@@ -380,7 +380,7 @@ li.list-inputs:hover {
     padding: 0.45em 0px;
     font-size: 0.83em;
     position: relative;
-    min-width: calc(100% - 1.66em);
+    min-width: 100%;
     left: 0;
     background-color: #fff;
     z-index: 1;
@@ -394,14 +394,6 @@ li.list-inputs:hover {
     margin: auto;
     min-height: 2.66em;
     transition: 0.3s ease;
-}
-
-.data-table-rows:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.data-table-rows:nth-child(odd) {
-    background-color: #ffffff;
 }
 
 .data-table-rows:hover {
@@ -439,9 +431,7 @@ li.list-inputs:hover {
     padding-bottom: 2px;
 }
 
-.row-cells div:hover {
-    letter-spacing: 0.3px;
-}
+
 
 .head-cells {
     margin: 0 3px;
@@ -455,7 +445,7 @@ li.list-inputs:hover {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 140px;
+    width: 150px;
     padding-left: 30px;
 }
 
@@ -1145,13 +1135,6 @@ button.tmbutton:disabled:hover {
     font-size: 12px;
     font-weight: 600;
 }
-
-.data-table-rows:nth-child(even) {
-    border-radius: 0.3em;
-    padding-bottom: 5px;
-    height: 2.7em;
-}
-
 
 /**************************************/
 
