--- a/webapp/src/app/pacman-features/modules/admin/update-rule/update-rule.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/update-rule/update-rule.component.css
@@ -218,7 +218,7 @@ ul.input-wrapper {
 .data-table-content {
     position: relative;
     overflow-y: hidden;
-    overflow-x: hidden;
+    overflow-x: auto;
     min-height: 7em;
 }
 
@@ -244,7 +244,7 @@ ul.input-wrapper {
     padding: 0.45em 0px;
     font-size: 0.83em;
     position: relative;
-    min-width: calc(100%);
+    min-width: 100%;
     left: 0;
     background-color: #fff;
     z-index: 1;
@@ -260,14 +260,6 @@ ul.input-wrapper {
     width: calc(100% - 1px);
     margin: auto;
     min-height: 2.66em;
-}
-
-.data-table-rows:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.data-table-rows:nth-child(odd) {
-    background-color: #ffffff;
 }
 
 .data-table-rows:hover {
@@ -313,11 +305,12 @@ ul.input-wrapper {
     overflow: unset;
     text-overflow: nowrap;
     white-space: nowrap;
-    width: 140px;
+    width: 150px;
 }
 
 .data-table-inner-content {
-    overflow-y: unset;
+    overflow-y: auto;
+    scrollbar-width: none;
     min-width: 100%;
     position: relative;
     margin-bottom: 0.3em;
@@ -751,12 +744,6 @@ button.tmbutton:disabled:hover {
     font-size: 12px;
     font-weight: 600;
 }
-
-.data-table-rows:nth-child(even) {
-    border-radius: 0.3em;
-    padding-bottom: 5px;
-}
-
 
 /**************************************/
 
