--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
@@ -33,6 +33,8 @@
 .pk-top-content {
     padding: 2em 3em 1.8em;
     background-color: #fff;
+    font: var(--text-caption);
+    color: var(--text-low-emphasis);
 }
 .pk-top-header {
     padding-bottom: 1.2em;
