--- a/webapp/src/app/pacman-features/secondary-components/multi-band-donut/multi-band-donut.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/multi-band-donut/multi-band-donut.component.css
@@ -16,6 +16,12 @@
     position: relative;
     width: 100%;
     height: 100%;
+    background: var(--background-white);
+    border-bottom-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+    border-left: 1px solid var(--border-100);
+    border-right: 1px solid var(--border-100);
+    border-bottom: 1px solid var(--border-100);
 }
 
 .donut-chart-center {
