--- a/webapp/src/app/pacman-features/secondary-components/multiline-brush-zoom/multiline-brush-zoom.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/multiline-brush-zoom/multiline-brush-zoom.component.css
@@ -16,6 +16,10 @@
     width: 100%;
     height: 100%;
     position: relative;
+    font: var(--text-overline);
+    border-left: 1px solid var(--border-100);
+    border-right: 1px solid var(--border-100);
+    border-bottom: 1px solid var(--border-100);
 }
 
 .multiline-graph-container .count-in-range {
