--- a/webapp/src/app/pacman-features/secondary-components/tagging-compliance-trend/tagging-compliance-trend.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/tagging-compliance-trend/tagging-compliance-trend.component.css
@@ -28,7 +28,10 @@
 .sub-header {
     padding: 0.8em;
     background-color: #ffffff;
-    border: solid 1px #d6e2f1;
+    border-bottom: solid 2px var(--border-100);
+    border-top: none;
+    border-left: none;
+    border-right: none;
     color: #555;
     font-size: 1em;
 }
