modified few styles under Branding changes

--- a/webapp/src/app/landing-page/home-page/home-page.component.css
+++ b/webapp/src/app/landing-page/home-page/home-page.component.css
@@ -63,7 +63,7 @@
 .mr-title-text {
     font-size: 6.5em;
     font-weight: bold;
-    margin-top: .1em;
+    margin-top: 1em;
 }
 
 .mr-subtitle-text {
