--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/delete-asset-groups/delete-asset-groups.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/delete-asset-groups/delete-asset-groups.component.css
@@ -368,7 +368,6 @@ li.list-inputs:hover {
 
 .data-table-wrap a:hover {
     color: var(--primary-400);
-    /*font-family: ex2-medium;*/
 }
 
 .data-table-head {
@@ -481,6 +480,7 @@ li.list-inputs:hover {
     border-top: solid 1.5px #efefef;
     box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
     position: relative;
+    padding: 16px 24px;
 }
 
 .test {
@@ -498,6 +498,7 @@ li.list-inputs:hover {
 .paginator-arrow {
     margin: 0 1.5em;
     cursor: pointer;
+    padding-top: 2px;
 }
 
 .paginator-arrow:hover img {
