--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/domains/create-update-domain/create-update-domain.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/domains/create-update-domain/create-update-domain.component.css
@@ -101,8 +101,6 @@ ul.input-wrapper {
 
 .data-table-wrap a:hover {
     color: var(--primary-400);
-    letter-spacing: 0.2px;
-    text-shadow: 0.66px 0;
 }
 .data-table-paginator-wrap {
     background-color: #fff;
@@ -111,6 +109,7 @@ ul.input-wrapper {
     border-top: solid 1.5px #efefef;
     box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
     position: relative;
+    padding: 16px 24px;
 }
 .header-text {
     padding-top: 7px;
