--- a/webapp/src/app/pacman-features/modules/admin/enable-disable-rule/enable-disable-rule.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/enable-disable-rule/enable-disable-rule.component.css
@@ -369,9 +369,6 @@ li.list-inputs:hover {
 
 .data-table-wrap a:hover {
     color: var(--primary-400);
-    /*font-family: ex2-medium;*/
-    letter-spacing: 0.2px;
-    text-shadow: 0.66px 0;
 }
 
 .data-table-head {
@@ -486,6 +483,7 @@ li.list-inputs:hover {
     border-top: solid 1.5px #efefef;
     box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
     position: relative;
+    padding: 16px 24px;
 }
 
 .test {
@@ -503,6 +501,7 @@ li.list-inputs:hover {
 .paginator-arrow {
     margin: 0 1.5em;
     cursor: pointer;
+    padding-top: 2px;
 }
 
 .paginator-arrow:hover img {
