--- a/webapp/src/app/pacman-features/modules/admin/job-execution-manager/update-job-execution-manager/update-job-execution-manager.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/job-execution-manager/update-job-execution-manager/update-job-execution-manager.component.css
@@ -486,6 +486,7 @@ li.list-inputs:hover {
     border-top: solid 1.5px #efefef;
     box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
     position: relative;
+    padding: 16px 24px;
 }
 
 .test {
@@ -503,6 +504,7 @@ li.list-inputs:hover {
 .paginator-arrow {
     margin: 0 1.5em;
     cursor: pointer;
+    padding-top: 2px;
 }
 
 .paginator-arrow:hover img {
