--- a/webapp/src/app/pacman-features/modules/admin/roles/create-update-roles/create-update-roles.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/roles/create-update-roles/create-update-roles.component.css
@@ -351,8 +351,6 @@ li.list-inputs:hover {
 
 .data-table-wrap a:hover {
     color: var(--primary-400);
-    letter-spacing: 0.2px;
-    text-shadow: 0.66px 0;
 }
 
 .data-table-head {
@@ -467,6 +465,7 @@ li.list-inputs:hover {
     border-top: solid 1.5px #efefef;
     box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
     position: relative;
+    padding: 16px 24px;
 }
 
 .test {
@@ -484,6 +483,7 @@ li.list-inputs:hover {
 .paginator-arrow {
     margin: 0 1.5em;
     cursor: pointer;
+    padding-top: 2px;
 }
 
 .paginator-arrow:hover img {
