--- a/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.css
+++ b/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.css
@@ -16,20 +16,14 @@
     width: 100%;
     height: 100%;
     font-size: 1em;
-    /*overflow: hidden;*/
 }
 
 .assets-issues-container {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    padding-top: 30px;
 }
 
-
-.assets-issues-container:hover {
-    overflow: auto;
-    overflow: overlay;
-}
 
 .widget-wrapper {
     align-items: flex-start;
@@ -37,10 +31,9 @@
 
 
 .widget {
-    box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.2);
     background-color: #fff;
     margin: 0 1em;
-    border-radius: 0.3em;
+    border-radius: var(--border-radius);
     width: calc(100% - 2em);
     overflow: hidden;
     position: relative;
@@ -48,13 +41,17 @@
 
 .header {
     padding: 16px 24px;
-    font-family: ex2-medium;
+    font-family: var(--text-medium-font-family);
     background-color: #fff;
-    color: #3f4a59;
-    border-top-left-radius: 0.4em;
-    border-top-right-radius: 0.4em;
-    border-bottom: 0.1em solid #d5dce2;
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+    border-bottom: 2px solid var(--border-100);
 }
+
+.asset-summary ,.metaData-wrapper{
+    padding: 0 1.25em 2em 1.25em;
+}
+
 
 .title-text {
     display: inline-block;
@@ -153,7 +150,12 @@
 
 .sub-head {
     padding: 16px 24px;
-    background-color: #dce3e9;
+    background-color: var(--background-white);
+    position: relative;
+    border-bottom: 2px solid var(--border-100);
+    border-top: 1px solid var(--border-100);
+    border-right: 1px solid var(--border-100);
+    border-left: 1px solid var(--border-100);
 }
 
 .notifications-details {
@@ -205,6 +207,10 @@
     padding: 1em;
     min-height: 8em;
     position: relative;
+    background-color: var(--background-white);
+    border: 1px solid var(--border-100);
+    border-bottom-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
 }
 
 .button-parent /deep/ .app-button {
@@ -236,6 +242,13 @@
 
 .buttons-wrapper {
     padding: 0.5em 8%;
+    background-color: var(--background-white);
+    border-bottom-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+    border-left: 1px solid var(--border-100);
+    border-right: 1px solid var(--border-100);
+    border-bottom: 1px solid var(--border-100);
+
 }
 
 .asset-container {
