--- a/webapp/src/app/pacman-features/secondary-components/total-tag-compliance/total-tag-compliance.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/total-tag-compliance/total-tag-compliance.component.css
@@ -16,18 +16,23 @@
     padding: 16px 24px;
     background-color: var(--background-white);
     font-size: 1em;
-    color: #3f4a59;
-    border: 2px solid var(--border-100);
+    color: var(--text-high-emphasis);
+    border: 1px solid var(--border-100);
 }
 
 .cg-container-parent {
-    padding: 1px;
+    background-color: var(--background-white);
     display: flex;
     height: calc(36.28vh - 6.75em);
     font-size: 1em;
     position: relative;
     min-height: 18em;
 }
+
+.total-tag-compliance-wrapper .complaince-graph-container {
+    border-radius: 0px !important;
+}
+
 
 .transition {
     transition: 0.3s ease;
@@ -43,10 +48,6 @@ app-multi-band-donut {
     height: auto;
     position: relative;
     padding: 0 1.25em 2em 1.25em;
-}
-
-app-total-tag-compliance-wrapper .complaince-graph-container {
-    border-radius: none;
 }
 
 .tag-compliance-details {
