--- a/webapp/src/app/post-login-app/post-login-app.component.css
+++ b/webapp/src/app/post-login-app/post-login-app.component.css
@@ -14,7 +14,8 @@
 
 .pacman-logged-in-section { 
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    height: fit-content;
     background-repeat: no-repeat;
     background-size: cover;
     font-size: 1em;
@@ -29,8 +30,8 @@
 }
 
 .post-login-body {
-    height: 100%!important;
     position: relative!important;
+    padding: 0px 28px;
 }
 
 .pacman-logged-in-section.is-offine {
