--- a/webapp/src/app/shared/ag-grid-table/ag-grid-table.component.css
+++ b/webapp/src/app/shared/ag-grid-table/ag-grid-table.component.css
@@ -6,6 +6,7 @@
     box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
     position: relative;
     flex-shrink: 0;
+    padding: 16px 24px;
 }
 .sub-head {
  min-height: 3em;
@@ -33,6 +34,7 @@
 .paginator-arrow {
     margin: 0 1.5em;
     cursor: pointer;
+    padding-top: 2px;
 }
 .paginator-arrow.rotate180 {
     transform: translateY(-1px) rotate(180deg);
