--- a/webapp/src/app/shared/data-table/data-table.component.css
+++ b/webapp/src/app/shared/data-table/data-table.component.css
@@ -84,9 +84,6 @@
 
 .data-table-wrap a:hover {
     color: var(--primary-400);
-    /*font-family: ex2-medium;*/
-    letter-spacing: 0.2px;
-    text-shadow: 0.66px 0;
 }
 
 .data-table-head {
@@ -190,9 +187,6 @@
     z-index: -1;
 }
 
-.data-table-current {
-    z-index: 2;
-}
 
 .data-table-paginator-wrap {
     background-color: #fff;
@@ -202,6 +196,7 @@
     box-shadow: 0px -1.5px 6px -3px rgba(0, 0, 0, 0.16);
     position: relative;
     flex-shrink: 0;
+    padding: 16px 24px;
 }
 
 .test {
@@ -219,6 +214,7 @@
 .paginator-arrow {
     margin: 0 1.5em;
     cursor: pointer;
+    padding-top: 2px;
 }
 
 .paginator-arrow:hover img {
