--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -473,6 +473,7 @@ text.axis-title {
 
 .pointer {
     cursor: pointer;
+    height: 1.1em;
 }
 
 .nowrap-ellipsis {
@@ -515,7 +516,7 @@ text.axis-title {
 }
 
 .flex-around {
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .flex-evenly {
@@ -808,7 +809,7 @@ input:-webkit-autofill {
 }
 
 .floating-widgets-section {
-    width: 73%;
+    width: 68%;
     height: 100%;
 }
 
@@ -874,7 +875,7 @@ input:-webkit-autofill {
 
 .widget-wrapper {
     width: 100%;
-    padding: 0 1.25em 2em 1.25em;
+    padding: 0 1.5em 2em 1.25em;
     box-sizing: border-box;
     opacity: 1;
 }
@@ -988,7 +989,7 @@ html body .offline-ui.offline-ui-down.offline-ui-waiting .offline-ui-retry {
     padding-left: 34px;
     border-top-left-radius: var(--border-radius);
     border-top-right-radius: var(--border-radius);
-    position: sticky;
+    position: relative;
     top: 0;
     z-index: 11;
 }
@@ -1553,7 +1554,7 @@ li .details-left-value {
 .contextual-content-container {
     position: relative;
     flex-grow: 1;
-    width: 85%;
+    width: 80%;
     height: 100%;
     max-width: 100%;
 }
@@ -1570,7 +1571,8 @@ li .details-left-value {
     width: 100%;
     height: 100%;
     max-width: 100%;
-    /* overflow: hidden; */
+    overflow: auto;
+    scrollbar-width: none;
     border-radius: 5px;
     background-color: var(--background-grey);
 }
@@ -1597,7 +1599,7 @@ input.common-cb + label {
     border: 2px solid #919191;
     width: 18px;
     height: 18px;
-    border-radius: var(--border-radius);
+    border-radius: 3px;
     background: #fff;
     position: relative;
     display: flex;
