--- a/webapp/src/app/shared/contextual-menu/contextual-menu.component.html
+++ b/webapp/src/app/shared/contextual-menu/contextual-menu.component.html
@@ -12,23 +12,57 @@
  * limitations under the License.
  -->
 
- <div class="contextual-menu-wrapper" [ngStyle]="theme && {'background-color': theme['contextual-menu-bg-color']}">
-    <div class="contextual-menu-title">
-        <h6>{{pageTitle}}</h6>
-    </div>
-    <ul>
-        <li  *ngFor="let list of listOfMenus" >
-            <div class='contextual-menu-item flex flex-align-center' [class.hide]='list.cloudSpecific && ((provider.length == 1 && provider[0] == "azure") || (agAndDomain["ag"] && agAndDomain["ag"].includes("azure")))' (click)="$event.stopPropagation(); onSelect(list)" #rla="routerLinkActive" routerLink={{list.route}} routerLinkActive="active" [queryParams]="agAndDomain" [ngStyle]="theme && (rla.isActive ? {'background-color': theme['contextual-menu-active-color']} : {})">
-                <a class='pointer'> {{list.name}}</a>
-            </div>
-        </li>
-    </ul>
-    <div *ngIf="this.agAndDomain['domain'] ==='Infra & Platforms' " [class.hide]='showPacLoader.length' class='mr-multicloud-wrapper flex flex-col flex-align-center flex-center'>
-        <div class='mr-multicloud flex flex-row flex-align-center flex-center'>
-            <img class='each-cloud' alt='Azure' width="20px" src="/assets/icons/azure-grey.svg">
-            <div class='each-cloud plus-mark'>+</div>
-            <img class='each-cloud' alt='AWS' width="20px" src="/assets/icons/aws-grey.svg">
+<div class="contextual-menu-wrapper" [ngStyle]="theme">
+  <img
+    style="padding-top: 20px; padding-left: 16px"
+    width="146px"
+    height="48px"
+    src="/assets/images/Paladin_Logo_2C.svg"
+  />
+  <!-- asset-switcher -->
+  <div class="asset-switcher-container">
+    <app-asset-switcher></app-asset-switcher>
+  </div>
+  <tree-root [nodes]="nodes" class="tree">
+    <ng-template #treeNodeWrapperTemplate let-node let-index="index">
+      <div
+        class="node-wrapper"
+        [class.wrapper]="currentParentId == node.id && node.hasChildren"
+        [class.node-wrapper-active]="
+          node.id == currentNodeId && !node.hasChildren
+        "
+        [style.padding-left]="node.getNodePadding()"
+      >
+        <div *ngIf="node.data?.image" class="icon">
+          <img
+            class="node-img"
+            src="../assets/images/{{ node.data?.image }}.svg"
+            alt=""
+          />
         </div>
-        <div class='mr-multicloud-text'>Multi-Cloud Supported</div>
-    </div>
+        <div
+          class="node-content-wrapper"
+          [class.node-content-wrapper-focused]="node.isFocused"
+          (click)="node.mouseAction('click', $event)"
+          (dblclick)="node.mouseAction('dblClick', $event)"
+          (contextmenu)="node.mouseAction('contextMenu', $event)"
+          (treeDrop)="node.onDrop($event)"
+          [treeAllowDrop]="node.allowDrop"
+          [treeDrag]="node"
+          [treeDragEnabled]="node.allowDrag()"
+          [class.node-content-wrapper-expanded]="node.isExpanded"
+        >
+          <tree-node-content
+            [queryParams]="agAndDomain"
+            class="{{ node.data.name }}"
+            routerLink="{{ node.data?.route }}"
+            (click)="handleClick(node)"
+            [node]="node"
+            [index]="index"
+          ></tree-node-content>
+          <tree-node-expander [node]="node"></tree-node-expander>
+        </div>
+      </div>
+    </ng-template>
+  </tree-root>
 </div>
